--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,7 +59,7 @@ jobs:
       - name: Build with CMake
         run: cmake --build build --config ${{ matrix.config.build_type }}
       - name: Pack
-        run: cpack
+        run: cpack --config build/CPackConfigApp.cmake -B build
       - name: Publish app
         uses: svenstaro/upload-release-action@v2
         if: ${{ matrix.config.os == 'macos-10.15' }}
