--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Build with CMake
         run: cmake --build build --config Release
       - name: Bundle with CPack
-        run: cpack --config build/CPackConfig.cmake
+        run: cpack --config build/CPackConfigApp.cmake
       - name: Publish archive
         uses: ncipollo/release-action@v1
         with:
