--- a/.github/workflows/windows-vs2019.yml
+++ b/.github/workflows/windows-vs2019.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Build with CMake
         run: cmake --build build --config Release
       - name: Bundle with CPack
-        run: cpack --config build/CPackConfig.cmake -B build
+        run: cpack --config build/CPackConfigApp.cmake
       - name: Publish installer
         uses: ncipollo/release-action@v1
         with:
