--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -32,11 +32,11 @@ jobs:
       - name: Build with CMake
         run: cmake --build build --config Release
       - name: Bundle with CPack
-        run: cpack --config build/CPackConfigApp.cmake
+        run: cpack --config build/CPackConfigApp.cmake -B build
       - name: Publish bundle
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "*.dmg"
+          artifacts: "build/*.dmg"
           bodyFile: "HOWTO.md"
           commit: "main"
           tag: "Nightly"
