--- a/App/CMakeLists.txt
+++ b/App/CMakeLists.txt
@@ -143,6 +143,7 @@ set(CPACK_OUTPUT_CONFIG_FILE "${CMAKE_BINARY_DIR}/CPackConfigApp.cmake")
 set(OUTPUT_NAME ${BUNDLE_NAME})
 set(CPACK_PACKAGE_VENDOR "Tobias Hegemann")
 set(CPACK_PACKAGE_NAME ${INSTALLER_NAME})
+set(CPACK_PACKAGE_FILE_NAME ${INSTALLER_NAME})
 set(CPACK_PACKAGE_CONTACT "Tobias Hegemann <tobias.hegemann@googlemail.com")
 set(CPACK_PACKAGE_HOMEPAGE_URL "https://github.com/delude88")
 set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "${PROJECT_DESCRIPTION}")
