--- a/.github/workflows/windows-vs2019.yml
+++ b/.github/workflows/windows-vs2019.yml
@@ -33,13 +33,11 @@ jobs:
       - name: Configure CMake
         env:
           CMAKE_PREFIX_PATH: ${{env.Qt6_Dir}}
-        run: cmake -S . -B build -DUSE_GNUTLS=0 -DCMAKE_BUILD_TYPE=Release
+        run: cmake -S . -B build -DUSE_GNUTLS=0 -DCMAKE_BUILD_TYPE=Release -DBUILD_SERVICE=OFF
       - name: Build with CMake
         run: cmake --build build --config Release
       - name: Bundle App
         run: cpack --config build/CPackConfigApp.cmake -B build
-      - name: Bundle Service
-        run: cpack --config build/CPackConfigService.cmake -B build
       - name: Publish installer
         uses: ncipollo/release-action@v1
         with:
