Fix: zip are not published

--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Publish archive
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "build/*.tar.gz,build/*.sh,build/*.tar.Z"
+          artifacts: "build/*.tar.gz,build/*.sh,build/*.tar.Z,build/Headless-Connector-*.zip"
           bodyFile: "HOWTO.md"
           allowUpdates: true
           token: ${{ secrets.GITHUB_TOKEN }}
