--- a/.github/workflows/windows-vs2019.yml
+++ b/.github/workflows/windows-vs2019.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Publish installer
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "build/*.exe"
+          artifacts: "build/*.exe,build/*.zip"
           bodyFile: "HOWTO.md"
           allowUpdates: true
           token: ${{ secrets.GITHUB_TOKEN }}
