--- a/.github/workflows/release-ubuntu.yml
+++ b/.github/workflows/release-ubuntu.yml
@@ -1,8 +1,9 @@
-name: Ubuntu 20.04
+name: Release for Ubuntu 20.04
 
 on:
   push:
-    branches: [ main, development ]
+    tags:
+      - '*'
 
 jobs:
   build:
