--- a/.github/workflows/release-windows.yml
+++ b/.github/workflows/release-windows.yml
@@ -1,8 +1,9 @@
-name: Windows
+name: Release for Windows
 
 on:
   push:
-    branches: [ main, development ]
+    tags:
+      - '*'
 
 jobs:
   build:
