--- a/Service/CMakeLists.txt
+++ b/Service/CMakeLists.txt
@@ -97,12 +97,13 @@ set_target_properties(${PROJECT_NAME} PROPERTIES
 #   Installation
 #
 #################################################
+include(GNUInstallDirs)
 install(
         TARGETS ${PROJECT_NAME}
-        RUNTIME DESTINATION bin COMPONENT Service
-        LIBRARY DESTINATION lib COMPONENT Service
-        ARCHIVE DESTINATION lib COMPONENT Service
-        RESOURCE DESTINATION share COMPONENT Service
+        EXPORT "${PROJECT_NAME}Targets"
+        COMPONENT ${PROJECT_NAME}
+        #PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}
+        #INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
 )
 
 
@@ -126,18 +127,42 @@ set(CPACK_PACKAGE_ICON ${CMAKE_CURRENT_LIST_DIR}/assets/logo.png)
 set(CPACK_RESOURCE_FILE_LICENSE ${CMAKE_CURRENT_LIST_DIR}/../LICENSE)
 set(CPACK_RESOURCE_FILE_README ${CMAKE_CURRENT_LIST_DIR}/../README.md)
 if (WIN32)
-    # Windows
+    # Windows - unsupported right now
     set(CPACK_PACKAGE_FILE_NAME "Headless-Connector-${CMAKE_PROJECT_VERSION}-win64")
+    set(CPACK_ARCHIVE_FILE_NAME ${CPACK_PACKAGE_FILE_NAME})
+    include(InstallRequiredSystemLibraries)
+    set(CPACK_ARCHIVE_COMPONENT_INSTALL ON)
+    set(CPACK_GENERATOR "ZIP")
 elseif (APPLE)
     # Apple
     set(CPACK_PACKAGE_FILE_NAME "Headless-Connector-${CMAKE_PROJECT_VERSION}-macOS")
+    set(CPACK_ARCHIVE_FILE_NAME ${CPACK_PACKAGE_FILE_NAME})
+    include(InstallRequiredSystemLibraries)
+    set(CPACK_ARCHIVE_COMPONENT_INSTALL ON)
+    set(CPACK_GENERATOR "ZIP")
 elseif (UNIX)
     # Linux
-    set(CPACK_PACKAGE_FILE_NAME "Headless-Connector-${CMAKE_PROJECT_VERSION}-linux")
+    # Debian
+    set(CPACK_PACKAGE_CONTACT "tobias.hegemann@digital-stage.org")
+    set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Tobias Hegemann <${CPACK_PACKAGE_CONTACT}>")
+    set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "amd64")
+    set(CPACK_DEBIAN_PACKAGE_CONTROL_STRICT_PERMISSION TRUE)
+    set(CPACK_DEBIAN_PACKAGE_HOMEPAGE "${PROJECT_HOMEPAGE_URL}")
+    set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS YES)
+    set(
+            CPACK_INSTALL_DEFAULT_DIRECTORY_PERMISSIONS
+            OWNER_READ OWNER_WRITE OWNER_EXECUTE
+            GROUP_READ GROUP_EXECUTE
+            WORLD_READ WORLD_EXECUTE
+    )
+    set(CPACK_DEBIAN_FILE_NAME DEB-DEFAULT)
+    set(CPACK_DEB_COMPONENT_INSTALL YES)
+    set(CPACK_GENERATOR "DEB")
 endif ()
-set(CPACK_ARCHIVE_FILE_NAME ${CPACK_PACKAGE_FILE_NAME})
-include(InstallRequiredSystemLibraries)
-set(CPACK_GENERATOR "ZIP")
-set(CPACK_ARCHIVE_COMPONENT_INSTALL ON)
-set(CPACK_COMPONENTS_ALL Service)
+if (CMAKE_BUILD_TYPE_UPPER MATCHES "^(DEBUG|RELWITHDEBINFO)$")
+    set(CPACK_STRIP_FILES FALSE)
+else ()
+    set(CPACK_STRIP_FILES TRUE)
+endif ()
+set(CPACK_COMPONENTS_ALL ${PROJECT_NAME})
 include(CPack)
